# automatic-downlink

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CAPTION_CLASSIFICATION_TASK.md  CHANGELOG.md  CLAUDE.md  DETECTION_CAPABILITIES.md  Dockerfile  EXP_5.md  EXP_6.md  EXP_6_HIGH.md  METRICS.md  PRD.md  PRIORITY_POLICY.md  README.md  RISKS.md  docker-compose.yml  pyproject.toml
.codex/: config.toml
docs/: ARCHITECTURE.md  Article.md
evals/: README.md  hazard_high_seed_v1.jsonl  sentinel_eval_v1.jsonl
evals/candidates/: README.md  hazard_grid_v1.jsonl  labels_hazard_grid_v1.jsonl  sentinel_candidates.jsonl
evals/locations/: README.md  hazard_events.jsonl  hazard_grid_v1.jsonl  hazard_high_seed_locations.jsonl  high_value_locations.jsonl
evals/results/: 2026-04-22_exp6_benchmark_update.md  2026-04-22_hazard_seed_capture.md  README.md  sentinel_eval_v1_report.md  sentinel_eval_v1_results.json  sentinel_eval_v1_summary.json
evals/review_batches/: 2026-04-12_high_value_reviewed.jsonl  2026-04-12_historical_demo_reviewed.jsonl  2026-04-22_historical_demo_reviewed.jsonl  2026-04-22_policy_relabel_nonhazard_high_to_medium.jsonl  README.md
experiments/: CAPTION_CLASSIFICATION_TASK.md  EXP_5_CHANGELOG_IMPLEMENTATION.md  EXP_6.md  MODEL_AUTORESEARCH.md
scripts/: capture_eval_candidates.py  capture_hazard_grid.py  evaluate_current_cascade.py  evaluate_exp6_on_modal.py  label_hazard_grid.py  labeling_prompt.md  register_eval_samples.py  test_base_model.py  test_final_prompt.py  test_prompt_iterations.py
src/dashboard/: app.py
src/triage/: loop.py  (+5 more)
(+46 files in other folders)
